Adding code mirror.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-4" ng-controller="FunctionEditorController">
+            <div class="col-xs-4"
+                 ng-controller="FunctionEditorController">
                 <form class="fullHeight">
                     <textarea
                             ui-codemirror=""
                             ui-codemirror-opts="codemirrorOptions"
                             ng-model="functionModel">
-
                     </textarea>
                 </form>
             </div>
