--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
                     <button ng-click="onFunctionSend()" type="submit" class="btn btn-default pull-right margin20">Send</button>
                 </form>
             </div>
-            <div class="col-xs-8">
-                <form class="form-horizontal" action="">
-
-                </form>
+            <div class="col-xs-8" ng-controller="ExternalsFillController">
+                <div ng-repeat="ext in externalModel.externals">
+                    <div>{{ext.raw}} : {{ext.type}}</div>
+                </div>
             </div>
         </div>
     </div>
 
+    <script src="bower_components/lodash/dist/lodash.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/codemirror/lib/codemirror.js"></script>
     <script src="bower_components/angular-ui-codemirror/ui-codemirror.js"></script>
     <script src="app/function-editor/function-editor.js"></script>
     <script src="app/function-editor/controller/FunctionEditorController.js"></script>
+    <script src="app/function-editor/controller/ExternalsFillController.js"></script>
     <script src="app/function-editor/service/ExternalsModel.js"></script>
     <script src="app/function-editor/service/ExternalsService.js"></script>
     <script src="app/app.js"></script>
