--- a/index.html
+++ b/index.html
@@ -3,67 +3,37 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Dhi</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css"/>
-    <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css"/>
-    <link rel="stylesheet" href="bower_components/codemirror/theme/base16-dark.css"/>
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="bower_components/angular-material/themes/deep-purple-theme.css">
+    <link rel="stylesheet" href="bower_components/angular-material/themes/deep-orange-theme.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/code-styles.css"/>
 </head>
-<body>
-<div class="container-fluid main">
-    <div class="row">
-        <div class="col-xs-4 vr"
-             ng-controller="FunctionEditorController">
-            <form class="form">
-                <div class="form-group">
-                    <label class="col-sm-12">Enter the Function : </label>
-
-                    <div class="col-sm-12">
-                        <textarea
-                                ui-codemirror=""
-                                ui-codemirror-opts="codemirrorOptions"
-                                ng-model="externalModel.fnSource">
-                        </textarea>
-                    </div>
-                </div>
-                <button ng-click="onFunctionSend()" type="submit" class="btn
-                    btn-default pull-right margin20">Send</button>
-            </form>
+<body layout="vertical">
+    <md-toolbar class="md-whiteframe-z1 md-deep-purple-theme">
+        <div class="md-toolbar-tools">
+            <span flex>Code Browser</span>
+            <!-- fill up the space between left and right area -->
         </div>
-        <div class="col-xs-8" ng-controller="ExternalsFillController">
-            <div class="row form-section" ng-repeat="ext in externalModel.externals">
-                <div class="row">
-                    <div class="col-xs-4">
-                        <div class="row margining">
-                            {{ext.raw}} <span ng-if="ext.isFunction">returns </span>
-                            <span ng-if="!ext.isFunction"> = </span>
-                        </div>
-                    </div>
-                    <div class="col-xs-8">
-                        <div class="row margining">
-                            <input type="text" ng-model="ext.value" placeholder="value">
-                        </div>
-                        <div class="row margining" ng-if="ext.isFunction">
-                            Is a setter function : <input type="checkbox" ng-model="ext.isSetter">
-                        </div>
+    </md-toolbar>
+    <md-content flex layout="horizontal" class="md-padding">
+        <md-content class="code-section md-whiteframe-z1 md-padding" flex layout="horizontal">
+            <div ng-include="'app/codebrowser/templates/code.html'"></div>
+        </md-content>
+        <!--<md-content class="code-section" flex layout="vertical"></md-content>-->
+    </md-content>
+    <script src="bower_components/lodash/dist/lodash.min.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/hammerjs/hammer.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-material/angular-material.js"></script>
 
-                    </div>
-                </div>
-                <hr>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script src="bower_components/lodash/dist/lodash.min.js"></script>
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/codemirror/lib/codemirror.js"></script>
-<script src="bower_components/angular-ui-codemirror/ui-codemirror.js"></script>
-<script src="app/function-editor/function-editor.js"></script>
-<script src="app/function-editor/controller/FunctionEditorController.js"></script>
-<script src="app/function-editor/controller/ExternalsFillController.js"></script>
-<script src="app/function-editor/service/ExternalsModel.js"></script>
-<script src="app/function-editor/service/ExternalsService.js"></script>
-<script src="app/app.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/codebrowser/codebrowser.js"></script>
+    <script src="app/codebrowser/controller/ScopeCreatorController.js"></script>
+    <script src="app/codebrowser/controller/IdentifierController.js"></script>
+    <script src="app/codebrowser/directive/ScopeCreator.js"></script>
+    <script src="app/codebrowser/directive/identifier.js"></script>
 </body>
 </html>
