initializing member information.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <script src="app/codebrowser/codebrowser.js"></script>
     <script src="app/codebrowser/controller/ScopeCreatorController.js"></script>
     <script src="app/codebrowser/controller/IdentifierController.js"></script>
+    <script src="app/codebrowser/controller/MemberExpressionController.js"></script>
     <script src="app/codebrowser/directive/ScopeCreator.js"></script>
     <script src="app/codebrowser/directive/identifier.js"></script>
+    <script src="app/codebrowser/directive/memberexpression.js"></script>
 </body>
 </html>
